--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
     <h1>Edit <%= campground.title %>
     </h1>
 
-    <form class="validated-form" action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate>
+    <form class="validated-form" action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate enctype="multipart/form-data">
 
         <div class="mb-3">
             <label class="form-label" for="title">Title</label>
@@ -18,9 +18,12 @@
         </div>
 
         <div class="mb-3">
-            <label class="form-label" for="image">Image</label>
-            <input class="form-control" type="text" id="image" name="campground[image]" value="<%= campground.image %>"
-                required>
+            <div class="form-file custom-file">
+                <input type="file" class="form-file-input" id="image" name="image" multiple>
+                <label class="form-file-label" for="image">
+                    <span class="form-file-text custom-file-label">Add more image(s)...</span>
+                </label>
+            </div>
         </div>
 
         <div class="mb-3">
