--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,9 +7,8 @@
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <% for(image of campground.images) { %>
-                        <img class="img-fluid" src="<%= image.url %>" class="card-img-top" alt="Campground Image">
-                        <% } %>
+                    <img class="img-fluid" src="<%= campground.images[0].url %>" class="card-img-top"
+                        alt="Campground Image">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
